<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">
    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_user_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/label_first_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title"
            android:textStyle="normal" />
        <EditText
            android:id="@+id/firstname_dialog_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_first_name"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="1"
            android:textSize="@dimen/input_new_note" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/label_last_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/last_name_dialog_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_last_name"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="1"
            android:textSize="@dimen/input_new_note" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/label_phone_number"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title"
            android:textStyle="normal" />
        <EditText
            android:id="@+id/phone_number_dialog_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_phone_number"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="1"/>
    </LinearLayout>

</LinearLayout>