<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/message_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_msg_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/msg_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/label_message_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title"
            android:textStyle="normal" />
        <EditText
            android:id="@+id/title_dialog_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_message_title"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="1"
            android:textSize="@dimen/input_new_note" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/msg_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/label_message_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_msg_content"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/content_dialog_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_message_content"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="1"
            android:textSize="@dimen/input_new_note" />
    </LinearLayout>

</LinearLayout>